manifest/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paybox-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: tcc-01.th1.proen.cloud
      http:
        paths:
          - path: "/group-5-dev/authenticationapi(/|$)(.*)"
            pathType: Prefix
            backend:
              service:
                name: authenticationapi-argo-service
                port:
                  number: 80
